# SEC_Edgar_MCP_Server

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
prototyping/: sec_edgar.ipynb
src/: client.py  google_oauth2_server.py  jwt_client.py  jwt_server.py  server.py  test_client.py  test_server.py  workos_authkit_client.py  workos_authkit_server.py
src/modules/: auth_google.py  utils.py
src/templates/: base.html  keys.html  login.html
