[project]
name = "sec-edgar-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docling>=2.46.0",
    "fastmcp>=2.11.3",
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "nest-asyncio>=1.6.0",
    "numpy>=2.3.2",
    "openai>=1.100.2",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "ruff>=0.12.9",
    "starlette>=0.47.2",
    "tiktoken>=0.11.0",
    "uvicorn>=0.35.0",
]
