[project]
name = "sec-edgar-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "authlib>=1.6.3",
    "cachetools>=6.2.0",
    "docling>=2.48.0",
    "fastmcp>=2.12.0",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "langchain-text-splitters>=0.3.10",
    "pandas>=2.3.2",
    "starlette>=0.47.3",
    "uvicorn[standard]>=0.35.0",
]
